--- a/kubeadm-config.yaml
+++ b/kubeadm-config.yaml
@@ -5,6 +5,7 @@ nodeRegistration:
     cgroup-driver: "systemd"
     cpu-cfs-quota: "false"
     fail-swap-on: "false"
+    feature-gates: IPv6DualStack=true
 ---
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
@@ -15,6 +16,14 @@ apiServer:
     oidc-client-id: account
     oidc-username-claim: email
     service-node-port-range: 25565-32767
+    feature-gates: IPv6DualStack=true
+controllerManager:
+  extraArgs:
+    feature-gates: IPv6DualStack=true
+    cluster-cidr: 10.244.0.0/16,fdb7:8a4e:a021:2608::/104
+    service-cluster-ip-range: 10.0.0.0/16,fdea:d838:22d7:721d::/104
+    node-cidr-mask-size-ipv4: "24"
+    node-cidr-mask-size-ipv6: "120"
 networking:
   dnsDomain: cluster.mcserverhosting.red
 controlPlaneEndpoint: cluster.mcserverhosting.red:6443
@@ -22,3 +31,6 @@ controlPlaneEndpoint: cluster.mcserverhosting.red:6443
 apiVersion: kubeproxy.config.k8s.io/v1alpha1
 kind: KubeProxyConfiguration
 mode: ipvs
+clusterCIDR: 10.0.0.0/16,fdb7:8a4e:a021:2608::/104
+featureGates: 
+ IPv6DualStack: true
