added toleration to mc-router

--- a/route/mc-router.yaml
+++ b/route/mc-router.yaml
@@ -57,10 +57,15 @@ spec:
         run: mc-router
     spec:
       nodeSelector:
-        gateway: "true"
-      serviceAccountName: mc-router
+        node-role.kubernetes.io/master: ""
+      tolerations:
+      - key: "node-role.kubernetes.io/master"
+        operator: "Exists"
+        effect: "NoSchedule"
+      serviceAccountName: mcsh-operator
       containers:
-      - image: itzg/mc-router:latest
+      - image: itzg/mc-router:1.10.2
+        terminationMessagePolicy: FallbackToLogsOnError
         name: mc-router
         args: ["--api-binding", ":8080", "--in-kube-cluster"]
         ports:
@@ -70,8 +75,8 @@ spec:
           containerPort: 8080
         resources:
           requests:
-            memory: 50Mi
-            cpu: "100m"
+            memory: 250Mi
+            cpu: "500m"
           limits:
-            memory: 100Mi
-            cpu: "250m"
+            memory: 250Mi
+            cpu: "500m"
