--- a/kubeadm-config.yaml
+++ b/kubeadm-config.yaml
@@ -5,7 +5,7 @@ nodeRegistration:
     cgroup-driver: "systemd"
     cpu-cfs-quota: "false"
     fail-swap-on: "false"
-    feature-gates: IPv6DualStack=true
+    feature-gates: IPv6DualStack=false
 ---
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
@@ -15,15 +15,14 @@ apiServer:
     oidc-issuer-url: https://keycloak.sfxworks.net/auth/realms/mcsh
     oidc-client-id: account
     oidc-username-claim: email
-    service-node-port-range: 25565-32767
-    feature-gates: IPv6DualStack=true
+    service-node-port-range: 3000-32767
+    feature-gates: IPv6DualStack=false
 controllerManager:
   extraArgs:
-    feature-gates: IPv6DualStack=true
-    cluster-cidr: 10.244.0.0/16,fdb7:8a4e:a021:2608::/104
-    service-cluster-ip-range: 10.0.0.0/16,fdea:d838:22d7:721d::/104
+    feature-gates: IPv6DualStack=false
+    cluster-cidr: 10.244.0.0/16
+    service-cluster-ip-range: 10.0.0.0/16
     node-cidr-mask-size-ipv4: "24"
-    node-cidr-mask-size-ipv6: "120"
 networking:
   dnsDomain: cluster.mcserverhosting.red
 controlPlaneEndpoint: cluster.mcserverhosting.red:6443
@@ -31,6 +30,6 @@ controlPlaneEndpoint: cluster.mcserverhosting.red:6443
 apiVersion: kubeproxy.config.k8s.io/v1alpha1
 kind: KubeProxyConfiguration
 mode: ipvs
-clusterCIDR: 10.244.0.0/16,fdb7:8a4e:a021:2608::/104
+clusterCIDR: 10.244.0.0/16
 featureGates: 
  IPv6DualStack: true
