--- a/netplan/s2.yaml
+++ b/netplan/s2.yaml
@@ -2,10 +2,12 @@ network:
   version: 2
   renderer: networkd
   ethernets:
-    eno4: {}
-  vlans:
-    vlan99:
-      id: 99
-      link: eno4
-      addresses: 
-      - 192.168.0.5/16
+    eno4:
+      match:
+        macaddress: 0c:c4:7a:9f:9a:b5
+      gateway4: 51.222.70.254
+      addresses:
+      - 51.222.70.228/32
+      routes:
+      - to: 51.222.70.254
+        scope: link
