--- a/netplan/s3.yaml
+++ b/netplan/s3.yaml
@@ -2,10 +2,12 @@ network:
   version: 2
   renderer: networkd
   ethernets:
-    eno4: {}
-  vlans:
-    vlan99:
-      id: 99
-      link: eno4
-      addresses: 
-      - 192.168.0.6/16
+    eno4:
+      match:
+        macaddress: 0c:c4:7a:9f:9a:37
+      gateway4: 51.222.70.254
+      addresses:
+      - 51.222.70.229/32
+      routes:
+      - to: 51.222.70.254
+        scope: link
